fixed overflow in profile

--- a/src/app/components/profil/loggedin/loggedin.component.css
+++ b/src/app/components/profil/loggedin/loggedin.component.css
@@ -42,7 +42,3 @@ button{
 .right-box {
   flex: 1;
 }
-
-app-profile-tour-list {
-  overflow-y: auto;
-}
